<resources>
    <string name="app_name">MobileComputingDb</string>
    <string name="StudentName">Enter student name</string>
    <string name="RollNumber">Enter roll number</string>
    <string name="IsEnrolled">IsEnrolled</string>
    <string name="ButtonViewAll">View All Records</string>
    <string name="Add">Add Record</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>